--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/utils": "^4.11.2",
+    "@mui/icons-material": "^5.4.4",
+    "@mui/material": "^5.4.4",
     "axios": "^0.25.0",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60"
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -30,7 +35,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint './src/**/*.{ts,tsx}'",
+    "lint": "eslint \"./src/**/*.{ts,tsx}\"",
     "lint:fix": "eslint './src/**/*.{ts,tsx}' --fix"
   },
   "browserslist": {
